--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1" />
-  <title>Microservices Dashboard</title>
+  <title>Dashboard</title>
   <base href="/">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body data-main-app ng-cloak>
   <!--[if lt IE 10]>
