Adding some charts from d3-financial-components

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,12 @@
   <script src="./components/es6-module-loader/dist/es6-module-loader.src.js"></script>
   <script src="./components/system.js/dist/system.src.js"></script>
   <script src="./loader.config.js"></script>
+  <script src="./components/d3-financial-components/node_modules/d3/d3.js"></script>
+  <script src="./components/d3-financial-components/node_modules/css-layout/src/Layout.js"></script>
+  <script src="./components/d3-financial-components/dist/d3-financial-components.js"></script>
+
+  <link href="./components/d3-financial-components/dist/d3-financial-components.css" rel="stylesheet"/>
+
   <script>
     System.baseURL = '/';
     System.import('app/bootstrap');
