--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <title>Dashboard</title>
   <base href="/">
   <link rel="stylesheet" href="./main.css">
+  <link rel="icon" href="favicon.png" sizes="32x32" type="image/png">
 </head>
 <body data-main-app ng-cloak>
   <!--[if lt IE 10]>
